# student-rag

./: .env  main.py  pyproject.toml
student-chatbot-main/: app.py  main.py  pyproject.toml  requirements.txt  verification_output.txt  verification_output_v2.txt  verify_env.py
student-chatbot-main/data/chroma_db/: chroma.sqlite3
student-chatbot-main/models/: llm_manager.py  mysql_manager.py  vector_manager.py
student-chatbot-main/views/: ui_components.py
